# tircbot

./: .gitmodules  CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp
